add some validation to inputs
